RESOLVED FIXED255085
[GTK] Minibrowser home page crash: ASSERTION FAILED: m_wasConstructedOnMainThread == isMainThread()
https://bugs.webkit.org/show_bug.cgi?id=255085
Summary [GTK] Minibrowser home page crash: ASSERTION FAILED: m_wasConstructedOnMainTh...
Alicia Boya García
Reported 2023-04-06 02:53:05 PDT
Program terminated with signal SIGSEGV, Segmentation fault. warning: Section `.reg-xstate/67' in core file too small. #0 0x00007f02e81fec2e in WTFCrash () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 327 *(int *)(uintptr_t)0xbbadbeef = 0; [Current thread is 1 (Thread 0x7f0254ffd640 (LWP 67))] (gdb) bt #0 0x00007f02e81fec2e in WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007f02efb4aa1b in WTFCrashWithInfo(int, char const*, char const*, int) () at WTF/Headers/wtf/Assertions.h:758 #2 0x00007f02f1532bbe in WTF::WeakPtrFactory<WebKit::AcceleratedSurfaceDMABuf, WTF::DefaultWeakPtrImpl>::initializeIfNeeded(WebKit::AcceleratedSurfaceDMABuf const&) const (this=0x7f02d400b5c0, object=...) at WTF/Headers/wtf/WeakPtr.h:214 #3 0x00007f02f1532ad5 in WTF::WeakPtr<WebKit::AcceleratedSurfaceDMABuf, WTF::DefaultWeakPtrImpl>::implForObject<WebKit::AcceleratedSurfaceDMABuf>(WebKit::AcceleratedSurfaceDMABuf const&) (object=...) at WTF/Headers/wtf/WeakPtr.h:169 #4 0x00007f02f1531db8 in WTF::WeakPtr<WebKit::AcceleratedSurfaceDMABuf, WTF::DefaultWeakPtrImpl>::WeakPtr<void>(WebKit::AcceleratedSurfaceDMABuf const&, WTF::EnableWeakPtrThreadingAssertions) (this=0x7f0254ffc588, object=..., shouldEnableAssertions=WTF::EnableWeakPtrThreadingAssertions::Yes) at WTF/Headers/wtf/WeakPtr.h:106 #5 0x00007f02f15304e8 in WebKit::AcceleratedSurfaceDMABuf::didRenderFrame() (this=0x7f02d400b5a0) at /app/webkit/Source/WebKit/WebProcess/WebPage/gtk/AcceleratedSurfaceDMABuf.cpp:217 #6 0x00007f02f153b2d2 in WebKit::LayerTreeHost::didRenderFrame() (this=0x7f02d41203e0) at /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:436 #7 0x00007f02f0a00c08 in WebKit::ThreadedCompositor::renderLayerTree() (this=0x7f02d400dc60) at /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:265 #8 0x00007f02f0a01d98 in WebKit::ThreadedCompositor::ThreadedCompositor(WebKit::ThreadedCompositor::Client&, WebKit::ThreadedDisplayRefreshMonitor::Client&, unsigned int, WebCore::IntSize const&, float, unsigned int)::$_2::operator()() const (this=0x7f02d40061a8) at /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:62 #9 0x00007f02f0a01d59 in WTF::Detail::CallableWrapper<WebKit::ThreadedCompositor::ThreadedCompositor(WebKit::ThreadedCompositor::Client&, WebKit::ThreadedDisplayRefreshMonitor::Client&, unsigned int, WebCore::IntSize const&, float, unsigned int)::$_2, void>::call() (this=0x7f02d40061a0) at WTF/Headers/wtf/Function.h:53 #10 0x00007f02f03b5692 in WTF::Function<void ()>::operator()() const (this=0x7f02d4125e78) at WTF/Headers/wtf/Function.h:82 #11 0x00007f02f09ff808 in WebKit::CompositingRunLoop::updateTimerFired() (this=0x7f02d4125e40) at /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/CompositingRunLoop.cpp:179 #12 0x00007f02f0a0913e in std::__invoke_impl<void, void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&>(std::__invoke_memfun_deref, void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&) (__f=@0x7f02d417de08: (void (WebKit::CompositingRunLoop::*)(WebKit::CompositingRunLoop * const)) 0x7f02f09ff790 <WebKit::CompositingRunLoop::updateTimerFired()>, __t=@0x7f02d417de18: 0x7f02d4125e40) at /usr/lib/gcc/x86_64-unknown-linux-gnu/12.2.0/../../../../include/c++/12.2.0/bits/invoke.h:74 #13 0x00007f02f0a09072 in std::__invoke<void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&>(void (WebKit::CompositingRunLoop::*&)(), WebKit::CompositingRunLoop*&) (__fn=@0x7f02d417de08: (void (WebKit::CompositingRunLoop::*)(WebKit::CompositingRunLoop * const)) 0x7f02f09ff790 <WebKit::CompositingRunLoop::updateTimerFired()>, __args=@0x7f02d417de18: 0x7f02d4125e40) at /usr/lib/gcc/x86_64-unknown-linux-gnu/12.2.0/../../../../include/c++/12.2.0/bits/invoke.h:96 #14 0x00007f02f0a0902d in std::_Bind<void (WebKit::CompositingRunLoop::*(WebKit::CompositingRunLoop*))()>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x7f02d417de08, __args=...) at /usr/lib/gcc/x86_64-unknown-linux-gnu/12.2.0/../../../../include/c++/12.2.0/functional:484 #15 0x00007f02f0a08fe6 in std::_Bind<void (WebKit::CompositingRunLoop::*(WebKit::CompositingRunLoop*))()>::operator()<, void>() (this=0x7f02d417de08) at /usr/lib/gcc/x86_64-unknown-linux-gnu/12.2.0/../../../../include/c++/12.2.0/functional:567 #16 0x00007f02f0a08f49 in WTF::Detail::CallableWrapper<std::_Bind<void (WebKit::CompositingRunLoop::*(WebKit::CompositingRunLoop*))()>, void>::call() (this=0x7f02d417de00) at WTF/Headers/wtf/Function.h:53 #17 0x00007f02f03b5692 in WTF::Function<void ()>::operator()() const (this=0x7f02d4125e70) at WTF/Headers/wtf/Function.h:82 #18 0x00007f02f04cd239 in WTF::RunLoop::Timer::fired() (this=0x7f02d4125e48) at WTF/Headers/wtf/RunLoop.h:195 #19 0x00007f02e855249a in WTF::RunLoop::TimerBase::TimerBase(WTF::RunLoop&)::$_3::operator()(void*) const (this=0x7f02d4125e48, userData=0x7f02d4125e48) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:177 #20 0x00007f02e8552445 in WTF::RunLoop::TimerBase::TimerBase(WTF::RunLoop&)::$_3::__invoke(void*) (userData=0x7f02d4125e48) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:169 #21 0x00007f02e85523a9 in WTF::RunLoop::$_0::operator()(_GSource*, int (*)(void*), void*) const (this=0x225d250, source=0x225d250, callback=0x7f02e8552430 <WTF::RunLoop::TimerBase::TimerBase(WTF::RunLoop&)::$_3::__invoke(void*)>, userData=0x7f02d4125e48) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #22 0x00007f02e85515a5 in WTF::RunLoop::$_0::__invoke(_GSource*, int (*)(void*), void*) (source=0x225d250, callback=0x7f02e8552430 <WTF::RunLoop::TimerBase::TimerBase(WTF::RunLoop&)::$_3::__invoke(void*)>, userData=0x7f02d4125e48) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:45 #23 0x00007f02e8cf1c37 in g_main_dispatch (context=0x7f0244000b70) at ../glib/gmain.c:3419 #24 g_main_context_dispatch (context=0x7f0244000b70) at ../glib/gmain.c:4137 #25 0x00007f02e8d48028 in g_main_context_iterate.constprop.0 (context=0x7f0244000b70, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4213 #26 0x00007f02e8cf12af in g_main_loop_run (loop=0x7f0244001b20) at ../glib/gmain.c:4413 #27 0x00007f02e8551b28 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #28 0x00007f02e849bfa4 in WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::$_1::operator()() const (this=0x7f02d417dde8) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #29 0x00007f02e849bf49 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::$_1, void>::call() (this=0x7f02d417dde0) at /app/webkit/Source/WTF/wtf/Function.h:53 #30 0x00007f02e6c3d662 in WTF::Function<void ()>::operator()() const (this=0x7f0254ffcba0) at WTF/Headers/wtf/Function.h:82 #31 0x00007f02e84a7538 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7f02d4125e90) at /app/webkit/Source/WTF/wtf/Threading.cpp:249 #32 0x00007f02e855eff5 in WTF::wtfThreadEntryPoint(void*) (context=0x7f02d4125e90) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:242 #33 0x00007f02e1a8f1da in start_thread (arg=<optimized out>) at pthread_create.c:442 #34 0x00007f02e1b17f44 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Alicia Boya García
Comment 1 2023-04-06 03:17:44 PDT
EWS
Comment 2 2023-04-06 04:25:40 PDT
Committed 262660@main (11dcc4ddf457): <https://commits.webkit.org/262660@main> Reviewed commits have been landed. Closing PR #12453 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.